IN DEVELOPMENT ======= 1.2.6 

- added: new options parameter - framework.run(http/https, debug, [port], [ip], [options])

- fixed: views current routing
- fixed: websocket session and user
- fixed: controller.session and controller.user

- renamed: [backup] directory to [backups] 

======= 1.2.5

- I believe that this is the final version. From now I'll writing only documentation and some tutorials.
- please visit: https://github.com/petersirka/partial.js-modules

- added: encodeURIcomponent & decodeURIcomponent to WebSocket
- added: ~ to controller.file()
- added: framework.config['allow-compile-js'] {Boolean} (default true)
- added: framework.config['allow-compile-css'] {Boolean} (default true)
- added: request.user (default null)
- added: new view tag: @{user} (default null)
- added: controller.user (default null)
- added: framework.on('request-end', req, res) - close a request / response
- added: utils.isEmpty(obj)

- updated: framework.responseRange()

- renamed: framework.on('request') - framework.on('request-begin', req, res)
- renamed: framework.cache.write() - to - framework.cache.add()
- renamed: framework.cache.setExpires() - to - framework.cache.setExpire()

- removed: controller.isXHR (use controller.xhr)
- removed: req.isXHR (use req.xhr)

clean code

======= 1.2.4-6

- added: controller.ip;
- added: controller.host([path])
- added: @{host([path])}
- added: framework.response401(req, res)
- added: framework.response403(req, res)

- updated: response.cookie(name, value, expire, options)
- updated: request.session is null as default

- renamed: String.toSHA1() to String.sha1()
- renamed: String.toMD5() to String.md5()

- fixed: route dynamic params
- fixed: controller.view500()
- fixed: clearing temporary files

clean code

- NEW EXAMPLE: https://github.com/petersirka/partial.js/tree/master/examples/upload-multipart-filestorage

======= 1.2.4-5

IMPORTANT: